stderr
FizzBuzzerTest.java:12: error: cannot find symbol
    @Before
     ^
  symbol:   class Before
  location: class FizzBuzzerTest
FizzBuzzerTest.java:22: error: cannot find symbol
                    asserEquals("Buzz",actual.get(i));
                    ^
  symbol:   method asserEquals(String,String)
  location: class FizzBuzzerTest
FizzBuzzerTest.java:31: error: cannot find symbol
                    asserEquals("Fizz",actual.get(i));
                    ^
  symbol:   method asserEquals(String,String)
  location: class FizzBuzzerTest
FizzBuzzerTest.java:40: error: cannot find symbol
                    asserEquals("FizzBuzz",actual.get(i));
                    ^
  symbol:   method asserEquals(String,String)
  location: class FizzBuzzerTest
4 errors
